# niri-screen-recorder

./: Cargo.toml  README.md  flake.nix  result
src/: dbus.rs  main.rs  notifications.rs  recorder.rs
